Fix invisible arrow covering left half of category select button

--- a/client/src/CreateItemButtonComponent.module.css
+++ b/client/src/CreateItemButtonComponent.module.css
@@ -22,6 +22,7 @@
   top: 0;
   opacity: 0;
   transition: opacity 100ms 0ms;
+  pointer-events: none;
 }
 .CreateItemButtonComponent.focused::before {
   opacity: 1;
